force-app/main/default/objects/Activity/fields/OCX_Action_Deployment_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Action_Deployment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Account</label>
    <referenceTo>OCX_Action_Deployment_Account__c</referenceTo>
    <relationshipLabel>Inherited CTA Tasks</relationshipLabel>
    <relationshipName>Inherited_CTA_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>