force-app/main/default/objects/Activity/fields/OCX_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Action_ID__c</fullName>
    <description>Stable Customer AI action UUID. Preserved across resource versions.</description>
    <label>OCX Action ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>