force-app/main/default/objects/Activity/fields/OCX_Action_Key__c.field-meta.xml
<CustomField>
    <fullName>OCX_Action_Key__c</fullName>
    <description>Globally unique upsert key: sha256(tenant | resource id | action id). Written by Customer AI only.</description>
    <externalId>true</externalId>
    <label>OCX Action Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>