force-app/main/default/objects/Activity/fields/OCX_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Action_Type__c</fullName>
    <description>CTA or Task.</description>
    <label>OCX Action Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>