force-app/main/default/objects/Activity/fields/OCX_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Activity_ID__c</fullName>
    <description>Source conversation UUID (conv_corpus.id) for email/meeting interactions.</description>
    <externalId>true</externalId>
    <label>OCX Activity ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>