force-app/main/default/objects/Activity/fields/OCX_Channel__c.field-meta.xml
<CustomField>
    <fullName>OCX_Channel__c</fullName>
    <label>OCX Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>