force-app/main/default/objects/Activity/fields/OCX_Deployment_State__c.field-meta.xml
<CustomField>
    <fullName>OCX_Deployment_State__c</fullName>
    <label>Deployment State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>WITHDRAWN</fullName>
                <label>Withdrawn</label>
            </value>
            <value>
                <fullName>SOURCE_DEACTIVATED</fullName>
                <label>Source Deactivated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>