force-app/main/default/objects/Activity/fields/OCX_Inherited_From_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>OCX_Inherited_From_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inherited From Portfolio</label>
    <type>Checkbox</type>
</CustomField>