force-app/main/default/objects/Activity/fields/OCX_Parent_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Parent_Action_ID__c</fullName>
    <description>Parent action UUID for tasks that hang off a CTA. No Salesforce lookup in V1.</description>
    <label>OCX Parent Action ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>