force-app/main/default/objects/Activity/fields/OCX_Parent_Action_Key__c.field-meta.xml
<CustomField>
    <fullName>OCX_Parent_Action_Key__c</fullName>
    <description>Stable OCX action key of the parent CTA for an incoming nested task.</description>
    <label>OCX Parent Action Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>