force-app/main/default/objects/Activity/fields/OCX_Portfolio_CTA_Key__c.field-meta.xml
<CustomField>
    <fullName>OCX_Portfolio_CTA_Key__c</fullName>
    <label>Portfolio CTA Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>