force-app/main/default/objects/Activity/fields/OCX_Publication_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Publication_ID__c</fullName>
    <description>Salesforce ID of the OCX published content record that this review task represents.</description>
    <label>OCX Publication ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>