force-app/main/default/objects/Activity/fields/OCX_Published_Content__c.field-meta.xml
<CustomField>
    <fullName>OCX_Published_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Published Content</label>
    <referenceTo>OCX_Published_Content__c</referenceTo>
    <relationshipLabel>OCX Actions</relationshipLabel>
    <relationshipName>OCX_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>