force-app/main/default/objects/Activity/fields/OCX_Review_Due_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Review_Due_At__c</fullName>
    <description>Exact date and time, 48 hours after publication, by which the report should be reviewed.</description>
    <label>OCX Review Due At</label>
    <type>DateTime</type>
</CustomField>