force-app/main/default/objects/Activity/fields/OCX_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>OCX_Sentiment__c</fullName>
    <label>OCX Sentiment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>