force-app/main/default/objects/Activity/fields/OCX_Sequence__c.field-meta.xml
<CustomField>
    <fullName>OCX_Sequence__c</fullName>
    <description>Display order within the published action plan.</description>
    <label>OCX Sequence</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>