force-app/main/default/objects/Activity/fields/OCX_Source_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Portfolio</label>
    <referenceTo>OCX_Portfolio__c</referenceTo>
    <relationshipLabel>Inherited CTA Tasks</relationshipLabel>
    <relationshipName>Inherited_CTA_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>