force-app/main/default/objects/Activity/fields/OCX_Source_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Resource_ID__c</fullName>
    <description>Customer AI resource (canvas) UUID that produced this action.</description>
    <label>OCX Source Resource ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>