force-app/main/default/objects/Activity/fields/OCX_Source_State__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_State__c</fullName>
    <description>ACTIVE or SUPERSEDED. Action lists must filter on ACTIVE.</description>
    <label>OCX Source State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>