force-app/main/default/objects/Activity/fields/OCX_Source_Version__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_Version__c</fullName>
    <description>Resource version of the snapshot that last wrote this task.</description>
    <label>OCX Source Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>