force-app/main/default/objects/Activity/fields/OCX_Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>OCX_Withdrawal_Reason__c</fullName>
    <label>Withdrawal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>