force-app/main/default/objects/Activity/fields/OCX_Withdrawn_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Withdrawn_At__c</fullName>
    <label>Withdrawn At</label>
    <type>DateTime</type>
</CustomField>