force-app/main/default/objects/Activity/fields/OCX_Withdrawn_By__c.field-meta.xml
<CustomField>
    <fullName>OCX_Withdrawn_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdrawn By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Withdrawn CTA Tasks</relationshipLabel>
    <relationshipName>Withdrawn_CTA_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>